resized logo; added bottom nav-bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="logo">
             <img id= "foogle" src="foogle.png" alt"Foogle">
         </div>
-        <div class="seachbar">
+        <div class="searchbar">
             <input id="search" type="text" id="search"></input>
         </div>       
         <div class="buttons">
@@ -28,6 +28,14 @@
     </main>
 </body>
 
-<footer>    
+<footer>
+    <ul id=footer>
+        <li><a href="https://github.com/es-k/google-homepage">About</a></li>
+        <li><a href="https://github.com/es-k/google-homepage">Business</a></li>
+        <li><a href="https://github.com/es-k/google-homepage">How Search Works</a></li>
+        <li><a href="https://github.com/es-k/google-homepage">Privacy</a></li>
+        <li><a href="https://github.com/es-k/google-homepage">Terms</a></li>
+        <li><a href="https://github.com/es-k/google-homepage">Settings</a></li>
+    </ul>
 </footer>
 </html>     
