--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
         <a id="login" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Login</a>
     </div> 
     </header>
-
+    
     <main>
+        <div class="logo">
             <img id= "foogle" src="foogle.png" alt"Foogle">
-            <input id="search" type="text" id="search"></input>
+        </div>
+        <div class="searchbar">
+            <input type="text" id="search"></input>
+        </div>       
         <div class="buttons">
             <input type="submit" value="Google Search"></input>
             <input type="submit" value="I'm Feeling Lucky"></input>
