--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <a href="https://github.com/es-k/google-homepage">Store</a>
     </div> 
     <div class="top-right">
-        <a id="gmail" href="https://mail.google.com/mail/&ogbl">Gmail</a>
-        <a id="login" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Login</a>
+        <a id="gmail" href="ttps://github.com/es-k/google-homepage">Gmail</a>
+        <a id="login" href="ttps://github.com/es-k/google-homepage">Login</a>
     </div> 
     </header>
     
