aligned bottom nav-bar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     
     <footer>
     <div class="bottom-left">
+        <a href="https://github.com/es-k/google-homepage">About</a>
         <a href="https://github.com/es-k/google-homepage">Advertising</a>
         <a href="https://github.com/es-k/google-homepage">Business</a>
         <a href="https://github.com/es-k/google-homepage">How Search Works</a>
