--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     
     <header> 
-        <a id="gmail" href="https://github.com/es-k/google-homepage">Gmail</a>
-        <a id="gmail" href="https://github.com/es-k/google-homepage">Images</a>
+        <a id="top-links" href="https://github.com/es-k/google-homepage">Gmail</a>
+        <a id="top-links" href="https://github.com/es-k/google-homepage">Images</a>
         <span class="material-icons-outlined">apps</span>
-        <img id="gh-icon" src="https://avatars.githubusercontent.com/u/11750813?v=4" alt="gh-icon"><img>
+        <a href="https://github.com/es-k/google-homepage">
+            <img id="gh-icon" src="https://avatars.githubusercontent.com/u/11750813?v=4" alt="gh-icon"><img>
+        </a>
     </header>
     
     <main>
