added icons to search bar

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link href="reset.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    
 </head>
 
-<body>
-    
+<body>   
     <header> 
         <a id="top-links" href="https://github.com/es-k/google-homepage">Gmail</a>
         <a id="top-links" href="https://github.com/es-k/google-homepage">Images</a>
@@ -23,9 +22,13 @@
         <div class="logo">
             <img id= "foogle" src="foogle.png" alt"Foogle">
         </div>
+
         <div class="searchbar">
+            <span id="search-ico" class="material-icons">search</span>
             <input type="text" id="search"></input>
-        </div>       
+            <img id="mic" src="Gmic.png" alt="mic">
+        </div>
+
         <div class="buttons">
             <input type="submit" value="Google Search"></input>
             <input type="submit" value="I'm Feeling Lucky"></input>
@@ -39,13 +42,13 @@
         <a href="https://github.com/es-k/google-homepage">Business</a>
         <a href="https://github.com/es-k/google-homepage">How Search Works</a>
     </div>
+
     <div class="bottom-right">
         <a href="https://github.com/es-k/google-homepage">Privacy</a>
         <a href="https://github.com/es-k/google-homepage">Terms</a>
         <a href="https://github.com/es-k/google-homepage">Settings</a>
     </div>
-    </ul>
     </footer>   
-</body>
 
+</body>
 </html>   
