added shadows to header icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header> 
         <a id="top-links" href="https://github.com/es-k/google-homepage">Gmail</a>
         <a id="top-links" href="https://github.com/es-k/google-homepage">Images</a>
-        <span class="material-icons-outlined">apps</span>
+        <span class="material-icons-outlined" id="gapps">apps</span>
         <a href="https://github.com/es-k/google-homepage">
             <img id="gh-icon" src="https://avatars.githubusercontent.com/u/11750813?v=4" alt="gh-icon"><img>
         </a>
