--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <a id="top-links" href="https://github.com/es-k/google-homepage">Images</a>
         <span class="material-icons-outlined" id="gapps">apps</span>
         <a href="https://github.com/es-k/google-homepage">
-            <img id="gh-icon" src="https://avatars.githubusercontent.com/u/11750813?v=4" alt="gh-icon"><img>
+        <img id="gh-icon" src="https://avatars.githubusercontent.com/u/11750813?v=4" alt="gh-icon"><img>
         </a>
     </header>
     
     <main>
         <div class="logo">
-            <img id= "foogle" src="foogle.png" alt"Foogle">
+            <img id= "foogle" src="/assets/foogle.png" alt"Foogle">
         </div>
 
         <div class="searchbar">
             <span id="search-ico" class="material-icons">search</span>
             <input type="text" id="search"></input>
-            <img id="mic" src="Gmic.png" alt="mic">
+            <img id="mic" src="/assets/Gmic.png" alt="mic">
         </div>
 
         <div class="buttons">
