trying to fix gh pages images

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     
     <main>
         <div class="logo">
-            <img id= "foogle" src="/assets/foogle.png" alt"Foogle">
+            <img id= "foogle" src="assets/foogle.png" alt"Foogle">
         </div>
 
         <div class="searchbar">
             <span id="search-ico" class="material-icons">search</span>
             <input type="text" id="search"></input>
-            <img id="mic" src="/assets/Gmic.png" alt="mic">
+            <img id="mic" src="assets/Gmic.png" alt="mic">
         </div>
 
         <div class="buttons">
