--- a/index.html
+++ b/index.html
@@ -2,51 +2,54 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <link href="reset.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <title>Foogle</title> 
 </head>
 
 <body>   
     <header> 
-        <a id="top-links" href="https://github.com/es-k/google-homepage">Gmail</a>
-        <a id="top-links" href="https://github.com/es-k/google-homepage">Images</a>
+        <div class="top-links">
+            <a id="gmail" href="https://es-k.github.io/google-homepage/">Gmail</a>
+            <a id="images" href="https://es-k.github.io/google-homepage/">Images</a>
+        </div>
         <span class="material-icons-outlined" id="gapps">apps</span>
-        <a href="https://github.com/es-k/google-homepage">
-        <img id="gh-icon" src="https://avatars.githubusercontent.com/u/11750813?v=4" alt="gh-icon"><img>
+        <a href="https://github.com/es-k/">
+            <img id="gh-icon" src="https://avatars.githubusercontent.com/u/11750813?v=4" alt="gh-icon">
         </a>
     </header>
     
     <main>
         <div class="logo">
-            <img id= "foogle" src="assets/foogle.png" alt"Foogle">
+            <img id= "foogle" src="assets/foogle.png" alt="Foogle">
         </div>
 
         <div class="searchbar">
             <span id="search-ico" class="material-icons">search</span>
-            <input type="text" id="search"></input>
+            <input type="text" id="search">
             <img id="mic" src="assets/Gmic.png" alt="mic">
         </div>
 
         <div class="buttons">
-            <input type="submit" value="Google Search"></input>
-            <input type="submit" value="I'm Feeling Lucky"></input>
+            <input type="submit" value="Google Search">
+            <input type="submit" value="I'm Feeling Lucky">
         </div>
     </main>
     
     <footer>
     <div class="bottom-left">
-        <a href="https://github.com/es-k/google-homepage">About</a>
-        <a href="https://github.com/es-k/google-homepage">Advertising</a>
-        <a href="https://github.com/es-k/google-homepage">Business</a>
-        <a href="https://github.com/es-k/google-homepage">How Search Works</a>
+        <a href="https://es-k.github.io/google-homepage/">About</a>
+        <a href="https://es-k.github.io/google-homepage/">Advertising</a>
+        <a href="https://es-k.github.io/google-homepage/">Business</a>
+        <a href="https://es-k.github.io/google-homepage/">How Search Works</a>
     </div>
 
     <div class="bottom-right">
-        <a href="https://github.com/es-k/google-homepage">Privacy</a>
-        <a href="https://github.com/es-k/google-homepage">Terms</a>
-        <a href="https://github.com/es-k/google-homepage">Settings</a>
+        <a href="https://es-k.github.io/google-homepage/">Privacy</a>
+        <a href="https://es-k.github.io/google-homepage/">Terms</a>
+        <a href="https://es-k.github.io/google-homepage/">Settings</a>
     </div>
     </footer>   
 
